{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 28,
  "lineage": "29c8290f-4943-25aa-74fe-3b3a766126c6",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01ed306a12b7d1c96",
            "arn": "arn:aws:ec2:us-west-2:490089276961:instance/i-0f8030ed0c167b548",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f8030ed0c167b548",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "monitoring": false,
            "primary_network_interface_id": "eni-09d64e08e63852630",
            "private_dns": "ip-10-20-0-100.us-west-2.compute.internal",
            "private_ip": "10.20.0.100",
            "public_dns": "ec2-54-202-46-19.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.46.19",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e80b29f68c4056a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d353edf6c34c3c75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bebb4baf1d5df904",
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d353edf6c34c3c75"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc_ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0df30fb1adff046e1",
            "owner_id": "490089276961",
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            },
            "vpc_id": "vpc-0700afb730d6cedf7"
          }
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e235ffdac1b2427",
            "original_route_table_id": "rtb-0edf58431fc82b1d9",
            "route_table_id": "rtb-0d01d3b48512d15c5",
            "vpc_id": "vpc-0700afb730d6cedf7"
          }
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d01d3b48512d15c5",
            "owner_id": "490089276961",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df30fb1adff046e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            },
            "vpc_id": "vpc-0700afb730d6cedf7"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:490089276961:security-group/sg-0d353edf6c34c3c75",
            "description": "jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d353edf6c34c3c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins",
            "name_prefix": null,
            "owner_id": "490089276961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0700afb730d6cedf7"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:490089276961:subnet/subnet-0bebb4baf1d5df904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-0bebb4baf1d5df904",
            "map_public_ip_on_launch": true,
            "owner_id": "490089276961",
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            },
            "vpc_id": "vpc-0700afb730d6cedf7"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:490089276961:vpc/vpc-0700afb730d6cedf7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/24",
            "default_network_acl_id": "acl-032dbb07dba645eb2",
            "default_route_table_id": "rtb-0d01d3b48512d15c5",
            "default_security_group_id": "sg-08bc82f410630ad3e",
            "dhcp_options_id": "dopt-1c74687e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0700afb730d6cedf7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d01d3b48512d15c5",
            "owner_id": "490089276961",
            "tags": {
              "Env": "Test",
              "Name": "Jenkins"
            }
          }
        }
      ]
    }
  ]
}